update user device api
